[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kajotte-studio-tools"
version = "1.0.1"
authors = [
  { name="Kajotte Studio", email="support@kajotte-studio.com" },
]
description = "Professional ANSI terminal styling and productivity tools"
readme = "README.md"
license = { text="MIT" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Terminals",
]

[tool.setuptools]
# Automatycznie znajdzie folder kajotte_tools
packages = ["kajotte_tools"]

[project.urls]
"Homepage" = "https://kajotte-studio.com"
"Documentation" = "https://kajotte-studio.com/docs"